--- a/style/style.css
+++ b/style/style.css
@@ -25,7 +25,7 @@ body{
 }
 
 .container{
-    width: 90%;
+    width: 80%;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -62,7 +62,6 @@ header h1{
     width: 25%;
     height: 5%;
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -74,6 +73,7 @@ header h1{
 }
 
 .checkbox label{
+    margin-left: 0.5rem;
     color: #FFFFFF;
 }
 
@@ -87,7 +87,7 @@ main{
 }
 .filme{
     width: 90%;
-    height: 15vh;
+    height: 20vh;
     display: flex;
     justify-content: space-evenly;
     background-color: #1D1C3B;
@@ -101,17 +101,18 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    /*background-color: aqua;*/
+    border-radius: 50%;
 }
 
 .imagem img{
-    width: 50%;
-    height: 80%;
-
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    filter: drop-shadow(20px 20px 30px rgba(0, 0, 0, 0.3));
 }
 
 .fav-star{
-    width: 20%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -126,30 +127,30 @@ main{
 
 .fav-star .icon{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 }
 
 .icon .rating{
     width: 25%;
     display: flex;
-    justify-content: space-between;
 }
 
 .icon .rating p{
     color:var(--Branco);
     text-align: center;
+    margin-left: 0.5rem;
 }
 
 .icon .fav{
     width: 46%;
     display: flex;
-    justify-content: space-between;
 }
 
 .icon .fav p{
     text-align: center;
     color: var(--Branco);
+    margin-left: 0.5rem;
 }
 
 .sinopse{
